[package]
name = "util_lib"
version = "0.1.0"
edition = "2024"
authors = ["Sam Colak <sam@samcolak.com>"]

[profile.dev]
opt-level = 0
debug = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256


[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = true
codegen-units = 16


[target.'cfg(not(windows))'.dependencies]
rustix = { version = "0.38.34", default-features = false, features = [
    "system",
] }
syslog = "*"

[target.'cfg(windows)'.dependencies]
windows-targets = "*"
syslog = "^6.0"

[dependencies]
rand = "0.6.0"
chrono = "*"
base64 = "0.22.1"
uuid = { version = "1.1.2", features = ["serde", "v4", "v7", "fast-rng"] }
serde = { version = "1.0", features = ["derive"] }
totp-rs = { version = "*", features = ["otpauth"] }
maxminddb = "0.17"
serde_json = "1.0"
log = "~0.4.5"
md5 = "0.7.0"
regex = "*"
substring = "*"
warp = {version="*", features = ["tls", "compression"]}
flate2 = { version = "*", features = ["tokio"] }
brotli = "*"